--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,18 @@
 @use './reset.scss';
+@use './variables.scss' as v;
+
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');
+
+:root {
+    font-family: 'Lexend Deca', sans-serif;
+}
 
 body {
     box-sizing: border-box;
     min-height: 100vh;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -15,4 +23,112 @@ main {
 
     width: 100%;
     min-height: 100%;
+}
+
+section {
+    height: 27.625rem;
+
+    box-sizing: border-box;
+    padding: 3rem;
+
+    border: none;
+    outline: none;
+
+    * + * {
+        margin-block-start: 1.5625rem;
+    }
+}
+
+#sedans {
+    background-color: v.$brightOrange;
+
+    button {
+        color: v.$brightOrange;
+    }
+
+    button:hover {
+        background-color: v.$brightOrange;
+        color: v.$veryLightGray;
+    }
+}
+
+#suvs {
+    background-color: v.$darkCyan;
+
+    button {
+        color: v.$darkCyan;
+    }
+
+    button:hover {
+        background-color: v.$darkCyan;
+        color: v.$veryLightGray;
+    }
+}
+
+#luxury {
+    background-color: v.$veryDarkCyan;
+
+    button {
+        color: v.$veryDarkCyan;
+    }
+
+    button:hover {
+        background-color: v.$veryDarkCyan;
+        color: v.$veryLightGray;
+    }
+}
+
+h2 {
+    color: v.$veryLightGray;
+    font-family: 'Big Shoulders Display', cursive;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+p {
+    color: v.$transparentWhite;
+    font-size: .9375rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5625rem;
+}
+
+button {
+    width: 9.125rem;
+    height: 3rem;
+
+    border-radius: 1.5625rem;
+    border: 2px solid v.$veryLightGray;
+    outline: none;
+
+    background-color: v.$veryLightGray;
+
+    font-size: .9375rem;
+    line-height: 1.5625rem;
+
+    transition-property: background-color color;
+    transition-duration: .4s;
+    transition-timing-function: ease-out;
+}
+
+@media only screen and (min-width: 1080px) {
+    main {
+        flex-direction: row;
+        height: 100vh;
+    }
+
+    section {
+        position: relative;
+
+        height: 100%;
+    }
+
+    button {
+        position: absolute;
+        bottom: 3rem;
+        left: 3rem;
+    }
 }
