--- a/style.css
+++ b/style.css
@@ -151,12 +151,22 @@ button {
 
 @media only screen and (min-width: 1080px) {
   main {
+    box-sizing: border-box;
     flex-direction: row;
     height: 100vh;
+    padding: 18vh 18vw;
   }
   section {
     position: relative;
     height: 100%;
+  }
+  #sedans {
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+  }
+  #luxury {
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
   }
   button {
     position: absolute;
