centered on screen

--- a/style.scss
+++ b/style.scss
@@ -120,7 +120,7 @@ button {
         flex-direction: row;
         height: 100vh;
 
-        padding: 18vh 18vw;
+        padding: 21.375vh 18vw 16.125vh 18vw;
     }
 
     section {
