--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ button {
     box-sizing: border-box;
     flex-direction: row;
     height: 100vh;
-    padding: 18vh 18vw;
+    padding: 21.375vh 18vw 16.125vh 18vw;
   }
   section {
     position: relative;
