--- a/style.css
+++ b/style.css
@@ -136,6 +136,8 @@ p {
   font-style: normal;
   font-weight: 400;
   line-height: 1.5625rem;
+  box-sizing: border-box;
+  padding: 0rem 0.03125rem;
 }
 
 button {
